--- a/machine.html
+++ b/machine.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/2381671B43?viewed=true'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning ...</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/2381671B43?viewed=true'>SmartNews, Inc. - Jobs: Principal/Senior Staff Machine Learning ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... General Machine Learning, Deep Learning; Natural Language Processing (entity 
 recognition, categorization, text embedding, etc); Computer Vision, Image?...</p>
@@ -64,7 +64,7 @@ recognition, categorization, text embedding, etc); Computer Vision, Image?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/jobs/1083862'>Staff Software Engineer, Applied Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/jobs/1083862'>Staff Software Engineer, Applied Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
@@ -117,7 +117,7 @@ riskmethods.</p>
 Learning background to build out WeWork's Machine Learning Platform. If you're
 ?...</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/jobs/1082596/candidates/new'>Jobs: ML (Machine Learning) and Backend Engineer ... - MTailor</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/jobs/1082596/candidates/new'>Jobs: ML (Machine Learning) and Backend Engineer ... - MTailor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of ML (Machine Learning) and Backend Engineer at 
 MTailor.</p>
@@ -126,7 +126,7 @@ MTailor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/lightmatter/c42beaff-467d-4368-a4ac-c212a2cd4aa2'>Lightmatter - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -134,7 +134,7 @@ MTailor.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Machine Learning Engineer. S?o Paulo. Engineering ? Data Engineering. Full-
 time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
@@ -286,7 +286,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/deliveroo/jobs/1783567'>Job Application for Software Engineer, Machine Learning at Deliveroo</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -355,7 +355,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p>Jul 10, 2019 ... BSc, MSc or PhD in Computer Science, Statistics, or comparable knowledge; 
 Prior strong expertise and experience in machine learning and data science?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -372,7 +372,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
